-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.6.3
-
None
-
-
8473b9ad1 (dev), f6b4a4849 (6.7)
-
2024wk22s2FOQtforAndroid
QJniEnvironment::findStaticMethod and QJniObject::callStaticMethod do not work when using a jobjectarray in the template args to specify a function with a String[] as the return type. Specifying the signature with [Ljava/lang/String; does though. https://doc.qt.io/qt-6/qjniobject.html#method-signatures has a jstringArray in its documentation but that is not a thing. Looking at qjnitypes.h in typeSignature(), there is no signature for a String Array.
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTBUG-125287 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 561064,3 | JNI: fix docs snippet typo in QJniObject | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 561740,2 | JNI: fix docs snippet typo in QJniObject | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |