JNI: fix docs snippet typo in QJniObject

Pick-to: 6.7
Task-number: QTBUG-125287
Change-Id: Ie0f2f26400d2e055d1de7a2307c9905d12891828
Reviewed-by: Tinja Paavoseppä <tinja.paavoseppa@qt.io>